tests/negative/traits/type_not_impl.orng
fn main() -> Int {
    let x = 4
    x.>add(56)
}